# jj-bookmark

./: .gitignore  CHANGELOG.dev.md  CHANGELOG.md  README.md  workflow.md
.github/: release-notes-footer.md
.github/workflows/: deploy-web.yml  release.yml
jj-bookmark-app/: .gitignore  Package.resolved  Package.swift  package.sh
jj-bookmark-app/Resources/: AppIcon.icns  Info.plist.in
jj-bookmark-app/Sources/jj-bookmark-app/: AppDelegate.swift  AppPaths.swift  AutoExitManager.swift  Bookmark.swift  BookmarkCellView.swift  BookmarkTableView.swift  CLIInstaller.swift  CLIRunner.swift  FSWatcher.swift  FolderTree.swift  L10n.swift  MainMenu.swift  MainViewController.swift  SettingsWindowController.swift  Sorting.swift  main.swift
jj-bookmark-cli/: Cargo.toml
jj-bookmark-cli/src/: fetcher.rs  filter.rs  importer.rs  main.rs  model.rs  output.rs  pusher.rs  query.rs  store.rs  timeutil.rs
jj-bookmark-web/: README.md  package-lock.json  package.json  wrangler.toml
jj-bookmark-web/public/: index.html
jj-bookmark-web/src/: index.js
raycast/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
raycast/src/: search-bookmarks.tsx
scripts/: install-local.sh  set-version.sh  verify-app.sh
